@@ -17,6 +17,7 @@ import org.springframework.stereotype.Service;
 
 import javax.transaction.Transactional;
 import java.util.*;
+import java.util.stream.Collectors;
 
 @Service
 public class AddBookServiceImpl implements AddBookService {
@@ -70,25 +71,19 @@ public class AddBookServiceImpl implements AddBookService {
 
     @Override
     public List<SaveBookDto> listOfAddedBook(Integer pageNumber, Integer pageSize, String bookTitle) {
-
-//   //        total number of data
-//        int pageSize1=10;
-//  //total number of pages
-//        int pageNumber1=5;
         Pageable pageable = PageRequest.of(pageNumber, pageSize);
 
         Page<AddBook> listPage;
         if (bookTitle != null && !bookTitle.trim().isEmpty()) {
-            listPage = this.bookRepo.findByBookTitleContainingIgnoreCase(bookTitle, pageable);
+            listPage = bookRepo.findByBookTitleContainingIgnoreCase(bookTitle, pageable);
         } else {
-            listPage = this.bookRepo.findAll(pageable);
+            listPage = bookRepo.findAll(pageable);
         }
 
-        List<AddBook> list = listPage.getContent();
-        List<SaveBookDto>list1=list.stream()
-                .map(post -> this.modelMapper.map(post, SaveBookDto.class))
-                .toList();
-        return list1.isEmpty()?new ArrayList<>():list1;
+        List<AddBook> books = listPage.getContent();
+        return books.stream()
+                .map(book -> modelMapper.map(book, SaveBookDto.class))
+                .collect(Collectors.toList());
     }
 
 
